ingress.yaml
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: istio-gateway
#  labels:
#    app: istio-gateway
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vsvc
spec:
  hosts:
  - recommendation
  http:
  - name: primary
    route:
    - destination:
        host: recommendation
        subset: stable
      weight: 100
    - destination:
        host: recommendation
        subset: canary
      weight: 0
